name:                Crypto
version:             0.1.0.0
synopsis:            Solutions to http://cryptopals.com
description:         Solutions to http://cryptopals.com
homepage:            https://github.com/caneroj1/Crypto-hs
license:             BSD3
license-file:        LICENSE
author:              Joe Canero
maintainer:          jmc41493@gmail.com
copyright:           Copyright: (c) 2016 Joe Canero
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Internal.Base64
                     , Internal.BitOps
                     , Internal.Conversions
                     , Internal.TupleUtils
                     , Internal.Uncons
                     , Internal.XORCipher
                     , Internal.RepeatingXORCipher
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , vector
                     , containers
                     , split
                     , hexstring
                     , text
  default-language:    Haskell2010

executable Crypto-exe
  hs-source-dirs:      app
  other-modules:       Challenge
                     , Challenges.Challenge1
                     , Challenges.Challenge2
                     , Challenges.Challenge3
                     , Challenges.Challenge4
                     , Challenges.Challenge5
                     , Challenges.Challenge6
                     , Challenges.Types.Solveable
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , hexstring
                     , mtl
                     , Crypto
                     , text
  default-language:    Haskell2010

test-suite Crypto-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring
                     , Crypto
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/caneroj1/Crypto
